--- a/gradleBuildship/build.gradle
+++ b/gradleBuildship/build.gradle
@@ -17,6 +17,11 @@ configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
 	}
+	
+	// spring boot 기본 내장 Logging인 logback 제외
+	all {
+		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+	}
 }
 
 repositories {
@@ -34,6 +39,29 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+	
+	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+	
+	// 내장 톰켓 jsp 인식
+	compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-jasper', version: '8.5.20'
+	// jstl
+	compile group: 'javax.servlet', name: 'jstl', version: '1.2'
+	
+	// tiles
+	compile group: 'org.apache.tiles', name: 'tiles-jsp', version: '3.0.7'
+	compile group: 'org.apache.tiles', name: 'tiles-core', version: '3.0.7'
+	
+	// log4j2
+	compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.12.1'
+	compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.12.1'
+	
+	// mariaDB
+	compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.0.3'
+	
+	// mybatis
+	compile group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '1.3.0'
+	// mybatis에서 Timestamp => LocalDateTime 변환을 위한 라이브러리
+	compile group: 'org.mybatis', name: 'mybatis-typehandlers-jsr310', version: '1.0.2'
 }
 
 test {
