--- a/gradleBuildship/src/main/resources/application.properties
+++ b/gradleBuildship/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+# 포트변경(기본 8080)
+server.port=8089
 
+# jsp 파일 위치
+spring.mvc.view.prefix: /WEB-INF/views/
+# 확장자
+spring.mvc.view.suffix: .jsp
+
+# mariaDB
+spring.datasource.url=jdbc:mariadb://localhost:3306/mariadb
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=zmdzmd13!#
+
+# mybatis는 application.properties에서 설정이 안되기 때문에 직접 java 코드로 설정
+# mapper 위치 지정
+#mybatis.mapper-locations=mapper/*.xml
+# mybatis VO/DB 명칭표기 맞춤설정(ex: DB[USER_ID] -> VO[userId]
+#mybatis.configuration.map-underscore-to-camel-case=true
